# neowall

./: CHANGELOG.md  README.md  meson.build
config/: neowall.vibe
config/docs/: CONFIG.md
src/: eventloop.c  main.c  utils.c
src/compositor/backends/wayland/: wayland_core.c
src/compositor/backends/wayland/compositors/: kde_plasma.c  wlr_layer_shell.c
src/compositor/backends/x11/: README.md  x11_core.c  x11_wm_detect.c  x11_wm_detect.h
src/config/: config.c
src/occlusion/: occlusion_wayland.c  occlusion_x11.c
src/output/: output.c  output.h
src/render/: render.c
src/shader_lib/: shader_core.c  shader_multipass.c  shader_multipass.h
src/transitions/: transitions.c
tests/: test_x11_wm_detect.c
